# second.pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  conda_environment.yml  pyproject.toml  pytest.ini
notebooks/: clusters.ipynb  test.ipynb
second/dataset/: __init__.py  paris_orleans.py
second/model/: second.py
second/model/layers/: region_proposal.py  sparse_conv.py  vfe.py
second/model/losses/: sine.py  total.py
second/model/preprocessing/: prepare_data.py
second/model/scheduler/: custom_exponential.py
second/testing/: inference.py
second/training/: train.py
second/utils/: config.py  model_saver.py
