[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "second"
version = "2.1.0"
description = "Implementation of a 3D Object Detection model: SECOND."
readme = "README.md"
authors = [
    {name = "M. Medeng", email = "matthieu.medengessia@outlook.com"}
]

[tool.setuptools]
packages = ["second"]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
line_length = 120

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
